<resources>
    <string name="app_name">HoyComo</string>
    <string name="filters">Filtros</string>

    <string name="facebook_app_id">201786523941932</string>
    <string name="fb_login_protocol_scheme">fb331659324025102</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="hours_range">:min a :max hs</string>
    <string name="minutes_range">:min - :max minutos</string>
    <string name="up_to_minutes">Hasta :max minutos</string>
    <string name="avg_delay_time_minutes">Tiempo de espera: :avg min</string>
    <string name="fixed_minutes">:min minutos</string>
    <string name="no_available_stores">No encontramos comercios disponibles cerca de tu zona :(</string>
    <string name="schedule">Horarios</string>
    <string name="monday">Lunes</string>
    <string name="tuesday">Martes</string>
    <string name="wednesday">Miércoles</string>
    <string name="thursday">Jueves</string>
    <string name="friday">Viernes</string>
    <string name="saturday">Sábado</string>
    <string name="sunday">Domingo</string>
    <string name="closed">Cerrado</string>
    <string name="open_all_day">Abierto todo el día</string>
    <string name="close">Cerrar</string>
    <string name="error_no_stores">No se pudieron obtener más comercios. Por favor, chequeá tu conexión.</string>
    <string name="apply_filter">Aplicar</string>
    <string name="error_required_distance_filter">Debe ingresar un valor de distancia</string>
    <string name="error_required_permissions_distance_filter">Debe permitir usar la localización del celular para usar el filtro por distancia</string>
    <string name="delete_filters">Borrar Filtros</string>
    <string name="error_no_menu">No se pudo obtener el menú del comercio. Por favor, chequá tu conexión.</string>
    <string name="error_no_orders">No se pudieron obtener tus pedidos en curso. Por favor, chequá tu conexión.</string>
    <string name="error_no_reviews">No se pudieron obtener las opiniones sobre el comercio. Por favor, chequá tu conexión.</string>
    <string name="error_couldnt_post_review">No se pudo enviar tu opinión. Por favor, chequá tu conexión.</string>
    <string name="no_menu">El comercio no cuenta aún con un menú cargado</string>
    <string name="garnish">Guarnición</string>
    <string name="suitable_for">Apto para</string>
    <string name="coeliacs">Celíacos</string>
    <string name="diabetics">Diabéticos</string>
    <string name="vegans">Veganos</string>
    <string name="vegetarians">Vegetarianos</string>
    <string name="quantity">Cantidad</string>
    <string name="my_order">Mi pedido</string>
    <string name="my_orders">Mis pedidos</string>
    <string name="not_logged_in">No ha iniciado sesión</string>
    <string name="home">Inicio</string>
    <string name="log_in">Inicio de sesión</string>
    <string name="welcome">¡Bienvenido a HoyComo!</string>
    <string name="must_log_in_facebook">Debes iniciar sesión con Facebook para usar la app</string>
    <string name="error_log_in">Ha ocurrido un error y no se ha podido iniciar sesión</string>
    <string name="welcome_username">Bienvenido, :username</string>
    <string name="log_out">Cerrar sesión</string>
    <string name="add_comments">Agregar comentarios…</string>
    <string name="add_to_my_order">Agregar a mi pedido</string>
    <string name="log_in_for_order">Iniciá sesión para realizar tus pedidos</string>
    <string name="one_store_for_order">Lo sentimos, los pedidos sólo admiten un comercio por vez</string>
    <string name="see_my_order">Ver mi pedido</string>
    <string name="_continue">Continuar</string>
    <string name="subtotal_amount">Subtotal: :monto</string>
    <string name="subtract_discount">- :discount% de descuento</string>
    <string name="add_more_food">Agregar más comida</string>
    <string name="cancel">Cancelar</string>
    <string name="order_cancelled">El pedido fue cancelado</string>
    <string name="my_order_cancellation_dialog_body">Al salir del comercio se cancelará tu pedido actual. ¿Estás seguro de querer salir?</string>
    <string name="exit">Salir</string>
    <string name="better_not">Mejor no</string>
    <string name="confirm_order">Confirmar pedido</string>
    <string name="send_order">Enviar pedido</string>
    <string name="total">Total</string>
    <string name="address">Dirección</string>
    <string name="payment_method">Forma de pago</string>
    <string name="cash">Efectivo</string>
    <string name="estimated_time">Tiempo estimado</string>
    <string name="notes">Notas</string>
    <string name="note_example">Ej: Golpear puerta, no funciona el timbre</string>
    <string name="register_delivery_address">Registrar la dirección de envío</string>
    <string name="floor">Piso</string>
    <string name="apartment">Dpto</string>
    <string name="didnt_set_delivery_address">¡No ingresaste una dirección de entrega del pedido!</string>
    <string name="order_send_success">La orden fue enviada éxitosamente</string>
    <string name="order_send_error">Hubo un error y la orden no se pudo enviar al comercio</string>
    <string name="error_only_caba">Lo sentimos, por el momento sólo operamos dentro de CABA</string>
    <string name="no_garnish">Sin guarnición</string>
    <string name="no_comments">No hay comentarios</string>
    <string name="pending">Pendiente</string>
    <string name="in_preparation">En preparación</string>
    <string name="dispatched">Despachado</string>
    <string name="delivered">Entregado</string>
    <string name="cancelled">Cancelado</string>
    <string name="no_orders">No tenés pedidos en curso</string>
    <string name="how_to_order">Para realizar un pedido nuevo, seleccioná algún plato del menú del comercio que quieras y agregalo a tu pedido</string>
    <string name="one_hour_ago">Hace 1 hora</string>
    <string name="hours_ago">Hace :h horas</string>
    <string name="recently">Recién</string>
    <string name="minutes_ago">Hace :m minutos</string>
    <string name="rate_store">Danos tu opinión</string>
    <string name="thanks_rate">¡Gracias por compartir tu opinión!</string>
    <string name="hoycomo_thanks">Gracias por hacer tu pedido a través de HoyComo</string>
    <string name="opinion_about_store">Nos interesa saber tu opinión sobre este comercio</string>
    <string name="rate">Calificar</string>
    <string name="reject">Rechazar</string>
    <string name="my_order_not_delivered">No me entregaron mi pedido</string>
    <string name="i_did_receive_it">No, lo recibí</string>
    <string name="my_order_not_delivered_body_dialog">Parece que hubo una confusión y el comercio considera que tu pedido ya fue entregado. ¿Querés que reenviemos el pedido?</string>
    <string name="error_order_update">No se pudo actualizar el estado del pedido. Por favor, chequeá tu conexión.</string>
    <string name="order_updated">Se actualizó el estado del pedido y el comercio ya está al tanto de la situación</string>
    <string name="see_reviews">Ver opiniones</string>
    <string name="no_reviews">Aún no hay opiniones sobre este comercio.</string>
    <string name="first_to_review">¡Sé el primero en opinar tras realizar un pedido!</string>
    <string name="reviews">Opiniones</string>
    <string name="review">Opinión</string>
    <string name="filter_distance_title">Distancia máxima a mi ubicación</string>
    <string name="filter_distance_label">:kms kilómetros</string>
    <string name="filter_prices_title">Promedio máximo de precios</string>
    <string name="filter_prices_label">$</string>
    <string name="filter_wait_title">Tiempo promedio de espera</string>
    <string name="filter_wait_time_label">Minutos</string>
    <string name="filter_foodtype_title">Tipos de comida</string>
    <string name="filter_foodtype_prompt">Seleccione al menos un tipo de comida</string>
    <string name="filter_rating_title">Calificación mínima</string>
    <string name="error_load_foodtypes">Error al cargar tipos de comida</string>
    <string name="no_address">No hay una dirección cargada</string>
    <string name="profile">Perfil</string>
    <string name="your_address_was_updated">Tu dirección de envío por defecto fue actualizada</string>
</resources>
