<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/timetable"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:paddingLeft="4dp"
    android:paddingRight="4dp"
    android:layout_marginBottom="64dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/schedule"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="4dp"
        android:paddingBottom="2dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/monday"
            android:textSize="14sp"/>
        <TextView
            android:id="@+id/timetable_monday_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hours_range"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"/>
    </LinearLayout>

    <include layout="@layout/divider_primary_thin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="2dp"
        android:paddingBottom="2dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tuesday"
            android:textSize="14sp"/>
        <TextView
            android:id="@+id/timetable_tuesday_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hours_range"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"/>
    </LinearLayout>

    <include layout="@layout/divider_primary_thin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="2dp"
        android:paddingBottom="2dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wednesday"
            android:textSize="14sp"/>
        <TextView
            android:id="@+id/timetable_wednesday_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hours_range"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"/>
    </LinearLayout>

    <include layout="@layout/divider_primary_thin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="2dp"
        android:paddingBottom="2dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/thursday"
            android:textSize="14sp"/>
        <TextView
            android:id="@+id/timetable_thursday_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hours_range"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"/>
    </LinearLayout>

    <include layout="@layout/divider_primary_thin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="2dp"
        android:paddingBottom="2dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/friday"
            android:textSize="14sp"/>
        <TextView
            android:id="@+id/timetable_friday_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hours_range"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"/>
    </LinearLayout>

    <include layout="@layout/divider_primary_thin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="2dp"
        android:paddingBottom="2dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/saturday"
            android:textSize="14sp"/>
        <TextView
            android:id="@+id/timetable_saturday_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hours_range"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"/>
    </LinearLayout>

    <include layout="@layout/divider_primary_thin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="2dp"
        android:paddingBottom="4dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sunday"
            android:textSize="14sp"/>
        <TextView
            android:id="@+id/timetable_sunday_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hours_range"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"/>
    </LinearLayout>

</LinearLayout>