<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activity.ConfirmOrderActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/main_toolbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/confirm_order_store_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    />

                <TextView
                    android:id="@+id/confirm_order_store_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginBottom="12dp"
                    />

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:contentPadding="12dp"
                    android:layout_marginBottom="12dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="12dp"
                            android:layout_marginEnd="12dp"
                            android:ellipsize="marquee"
                            android:textSize="16sp"
                            android:text="@string/total"/>
                        <TextView
                            android:id="@+id/confirm_order_total_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textColor="@color/colorAccent"/>
                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:contentPadding="12dp"
                    android:focusableInTouchMode="true"
                    android:layout_marginBottom="64dp"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:text="@string/address"/>
                        <TextView
                            android:id="@+id/confirm_order_user_address"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textStyle="italic"
                            android:textColor="@color/colorPrimary"
                            />

                        <include layout="@layout/divider_primary_thin" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:textSize="16sp"
                            android:text="@string/payment_method"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="12dp"
                            android:textSize="16sp"
                            android:textStyle="italic"
                            android:text="@string/cash"
                            android:textColor="@color/colorPrimary"
                            />

                        <include layout="@layout/divider_primary_thin" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:textSize="16sp"
                            android:text="@string/estimated_time"/>
                        <TextView
                            android:id="@+id/confirm_order_estimated_time"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="12dp"
                            android:textSize="16sp"
                            android:textStyle="italic"
                            android:textColor="@color/colorPrimary"
                            />

                        <include layout="@layout/divider_primary_thin" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:textSize="16sp"
                            android:text="@string/notes"/>
                        <EditText
                            android:id="@+id/confirm_order_notes_input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textStyle="italic"
                            android:inputType="textAutoComplete|textCapSentences"
                            android:singleLine="true"
                            android:hint="@string/note_example"
                            android:textColor="@color/colorPrimary"
                            android:background="@android:color/transparent"
                            />

                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <Button style="@style/Widget.AppCompat.Button.Colored"
        android:id="@+id/confirm_order_send_order_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="12dp"
        android:text="@string/send_order"
        android:onClick="sendOrder"/>

</RelativeLayout>