<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RateStoreActivity">

    <LinearLayout
        android:id="@+id/rate_store_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/main_toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/hoycomo_thanks"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/colorPrimary"
                android:text="@string/opinion_about_store"/>

            <android.support.v7.widget.AppCompatRatingBar
                android:id="@+id/rate_store_rating_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="24dp"
                android:progressBackgroundTint="@color/colorPrimary"
                android:progressTint="@color/colorAccent"
                android:secondaryProgressTint="@color/colorAccent"
                android:numStars="5"
                android:rating="2.5" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/rate_store_input_comments"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="4"
                    android:maxLength="140"
                    android:hint="@string/add_comments" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/rate_store_loading"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/rate_store_send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@mipmap/ic_done_black_18dp" />

</RelativeLayout>