<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".activity.MenuItemActivity">

    <include layout="@layout/main_toolbar" />

    <RelativeLayout
        android:id="@+id/menu_item_image_slider_container"
        android:layout_width="match_parent"
        android:layout_height="140dp">
        <android.support.v4.view.ViewPager
            android:id="@+id/menu_item_slider_view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </android.support.v4.view.ViewPager>
        <android.support.design.widget.TabLayout
            android:id="@+id/menu_item_slider_tab_dots"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabBackground="@drawable/tab_selector"
            app:tabGravity="center"
            app:tabIndicatorHeight="0dp"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_gravity="left"
                android:gravity="left"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/menu_item_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:singleLine="true"/>

                <TextView
                    android:id="@+id/menu_item_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textSize="16sp"
                    android:textColor="@android:color/darker_gray"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:gravity="right"
                android:layout_marginLeft="96dp"
                android:layout_marginStart="96dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/menu_item_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"/>

                <TextView
                    android:id="@+id/menu_item_price_without_discount"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textSize="16sp"
                    android:textColor="@color/colorAccent"/>

            </LinearLayout>

        </LinearLayout>

        <include layout="@layout/divider_primary_thin"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="5"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/quantity"/>
            <Spinner
                android:id="@+id/menu_item_quantity_spinner"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="5"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/menu_item_garnish_label"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/garnish"/>
            <Spinner
                android:id="@+id/menu_item_garnish_spinner"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp"/>
        </LinearLayout>

        <include layout="@layout/divider_primary_thin"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textSize="16sp"
            android:textColor="@color/colorPrimary"
            android:text="@string/suitable_for"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/coeliacs"/>
            <ImageView
                android:id="@+id/menu_item_coeliacs_icon"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp"
                android:src="@mipmap/ic_done_black_18dp"
                android:tint="@color/success"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/diabetics"/>
            <ImageView
                android:id="@+id/menu_item_diabetics_icon"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp"
                android:src="@mipmap/ic_done_black_18dp"
                android:tint="@color/success"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/vegans"/>
            <ImageView
                android:id="@+id/menu_item_vegans_icon"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp"
                android:src="@mipmap/ic_done_black_18dp"
                android:tint="@color/success"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/vegetarians"/>
            <ImageView
                android:id="@+id/menu_item_vegetarians_icon"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp"
                android:src="@mipmap/ic_done_black_18dp"
                android:tint="@color/success"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>